// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When an existing application is marked certified a birth application writes the payment total to influxdb 1`] = `
Object {
  "fields": Object {
    "compositionId": "1744fc19-95be-434b-8bc9-a76d6b81551b",
    "total": undefined,
  },
  "measurement": "certification_payment",
  "tags": Object {
    "eventType": "BIRTH",
  },
}
`;

exports[`When an existing application is marked certified a death application writes the delta between REGISTERED and CERTIFIED states to influxdb 1`] = `
Object {
  "fields": Object {
    "compositionId": "62168b7e-7f80-4e2a-a7b0-1d33759c9d71",
    "currentTaskId": "75ba4bd8-009e-4a02-896c-148979dde09a",
    "durationInSeconds": 3564388,
    "previousTaskId": "e172627c-8490-44da-a702-80a082f978f5",
  },
  "measurement": "application_event_duration",
  "tags": Object {
    "currentStatus": "CERTIFIED",
    "eventType": "DEATH",
    "previousStatus": "REGISTERED",
  },
}
`;

exports[`When an existing application is marked certified writes the delta between REGISTERED and CERTIFIED states to influxdb 1`] = `
Object {
  "fields": Object {
    "compositionId": "1744fc19-95be-434b-8bc9-a76d6b81551b",
    "currentTaskId": "dcf1644e-362d-414f-b0cc-2b240eea8591",
    "durationInSeconds": 94381,
    "previousTaskId": "e172627c-8490-44da-a702-80a082f978f5",
  },
  "measurement": "application_event_duration",
  "tags": Object {
    "currentStatus": "CERTIFIED",
    "eventType": "BIRTH",
    "previousStatus": "REGISTERED",
  },
}
`;

exports[`When an existing application is marked registered a death application writes the delta between REGISTERED and CERTIFIED states to influxdb 1`] = `
Object {
  "fields": Object {
    "compositionId": "62168b7e-7f80-4e2a-a7b0-1d33759c9d71",
    "currentTaskId": "75ba4bd8-009e-4a02-896c-148979dde09a",
    "durationInSeconds": 3727875,
    "previousTaskId": "e172627c-8490-44da-a702-80a082f978f5",
  },
  "measurement": "application_event_duration",
  "tags": Object {
    "currentStatus": "REGISTERED",
    "eventType": "DEATH",
    "previousStatus": "DECLARED",
  },
}
`;

exports[`When an existing application is marked registered writes the delta between DECLARED and REGISTERED states to influxdb 1`] = `
Object {
  "fields": Object {
    "compositionId": "80433e78-7042-4837-b888-a79c0181bf4e",
    "currentTaskId": "18ea2464-f843-45e2-93b1-8b026e0d93a4",
    "durationInSeconds": 170630,
    "previousTaskId": "e172627c-8490-44da-a702-80a082f978f5",
  },
  "measurement": "application_event_duration",
  "tags": Object {
    "currentStatus": "REGISTERED",
    "eventType": "BIRTH",
    "previousStatus": "DECLARED",
  },
}
`;

exports[`When an existing application is marked registered writes the delta between VALIDATED and REGISTERED states to influxdb 1`] = `
Object {
  "fields": Object {
    "compositionId": "80433e78-7042-4837-b888-a79c0181bf4e",
    "currentTaskId": "18ea2464-f843-45e2-93b1-8b026e0d93a4",
    "durationInSeconds": 170630,
    "previousTaskId": "e172627c-8490-44da-a702-80a082f978f5",
  },
  "measurement": "application_event_duration",
  "tags": Object {
    "currentStatus": "REGISTERED",
    "eventType": "BIRTH",
    "previousStatus": "VALIDATED",
  },
}
`;

exports[`When an in-progress application is received writes the in complete field points to influxdb 1`] = `
Object {
  "fields": Object {
    "compositionId": "b2fbb82c-a68d-4793-98e1-87484fc785c4",
    "locationLevel5": "Location/308c35b4-04f8-4664-83f5-9790e790cde1",
  },
  "measurement": "in_complete_fields",
  "tags": Object {
    "eventType": "BIRTH",
    "missingFieldGroupId": "child-view-group",
    "missingFieldId": "placeOfBirth",
    "missingFieldSectionId": "child",
    "regStatus": "IN_PROGESS",
  },
}
`;
